--- a/projects/part3/favorites.html
+++ b/projects/part3/favorites.html
@@ -24,5 +24,52 @@
         </ul>
     </nav>
     <script src="script.js"></script>
+    <h2 id="center">Our Weekly Favorites</h2>
+    <div class="favs">
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+    </div>
+    <h2 id="center">Our Monthly Playlist</h2>
+    <section class="playlist">
+       <a href="#"><img src="images/200x200(1).gif"></a>
+        <p>Name</p>
+    </section>
+    <section class="playlist">
+        <a href="#"><img src="images/200x200(1).gif"></a>
+        <p>Name</p>
+    </section>
+    <section class="playlist">
+        <a href="#"><img src="images/200x200(1).gif"></a>
+        <p>Name</p>
 </body>
 </html>
