--- a/projects/part3/drops.html
+++ b/projects/part3/drops.html
@@ -24,5 +24,73 @@
         </ul>
     </nav>
     <script src="script.js"></script>
+    <div id="MusicVid">
+     <h2>New Music Videos</h2>
+     <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+    </div>
+    <div id="Albums">
+     <h2>New Albums</h2>
+     <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+    </div>
+    <div id="This Week">
+     <h2>New Singles</h2>
+     <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+         <img src="images/200x200(1).gif">
+         <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif">
+            <p>artist</p>
+        </section>
 </body>
 </html>
