--- a/assignments/assignment 7/index.html
+++ b/assignments/assignment 7/index.html
@@ -10,7 +10,7 @@
     <h1 id="center">Assignment 7</h1>
     <h2 id="center">Introduction to JavaScript</h2>
     </div>
-    <div id="changeimage">
+    <div id="clickimage">
         <h2 id="center">Change Image </h2>
         <img src="images/200x200(1).gif" id="switchimage">
         <button id="changeimage">Change Image</button>
