--- a/assignments/assignment 7/index.html
+++ b/assignments/assignment 7/index.html
@@ -13,18 +13,17 @@
     <div id="clickimage">
         <h2 id="center">Change Image </h2>
         <img src="images/200x200(1).gif" id="switchimage">
-        <button id="changeimage">Change Image</button>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis officia obcaecati officiis, voluptate quaerat enim pariatur repudiandae vero dolor sed dolorum sint reprehenderit ipsam autem voluptatibus. Delectus aliquid laudantium vero.</p>
     </div>
     <div id="slider">
         <h2 id="center">Slider Rotate</h2>
-        <img src="images/200x200(1).gif" id="rotateimage" id="imageslider">
-        <input type="range" id="slider" min="0" max="360" value="0">
+        <img src="images/200x200(1).gif" id="rotateimage">
+        
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis molestiae doloribus architecto, dignissimos, voluptatibus vero suscipit quia dolore ab obcaecati incidunt fugit eaque necessitatibus autem voluptate reprehenderit asperiores porro deserunt.</p>
-    </div>
+        <input id="imageslider" type="range" id="slider" min="0" max="360" value="0">
+</div>
 <div id="stars">
     <h2 id="center">Stars</h2>
-    <button id="addstars">Create Stars</button>
 </div>
 </div>
     </body>
