--- a/projects/part3/drops.html
+++ b/projects/part3/drops.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <Title>Underground Wiki</Title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head> 
 <body id="Drops">
@@ -62,7 +62,7 @@
          <p>artist</p>
         </section>
     </div>
-    <div id="This Week">
+    <div id="ThisWeek">
      <h2>New Singles</h2>
      <section>
          <img src="images/200x200(1).gif">
