--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@ Assignments
                 Intro to JavaScript
             </p>
         </section>
+        <section>
+            <h2>Assignment 8-If Statements</h2>
+            <a href="assignments/assignment 8/index.html"><img src="images/ss5.png"/></a>
+            <p>
+                Using if statements in JavaScript
+            </p>
 </div> 
 <div id="center">
 <h2>Projects</h2>
