--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Assignments
             <p>
                 Using if statements in JavaScript
             </p>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
