--- a/assignments/assignment 8/index.html
+++ b/assignments/assignment 8/index.html
@@ -2,6 +2,7 @@
 <html lang="eng">
     <head>
        <link rel="stylesheet" href="styles.css"/>
+       <script src="script.js"></script>
     </head>
     <body>
         <h1 id="center">Assignemnt 8</h1>
@@ -15,7 +16,7 @@
                 <a href="index.html"><li job="nav">Excericise 1</li></a>
                 <a href="drops.html"><li>Excericise 2</li></a>
         </nav>
-        
+
         <div id="content">
 
         </div>
