--- a/projects/part3/artist.html
+++ b/projects/part3/artist.html
@@ -25,25 +25,25 @@
     </nav>
     <script src="script.js"></script>
     <h2 id="center">Artist Spotlight</h2>
-    <img src="images/200x200(1).gif" alt="Artist Spotlight"/>
-    <p>Lorem Ipsum</p>
+    <img src="images/18.avif" alt="Artist Spotlight"/>
+    <p>Our weekly arist:TisaRay</p>
     <div id="Upcoming">
         <h3>Upcoming Artist</h3>
         <section>
-            <img src="images/200x200(1).gif" alt=""/>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+            <img src="images/19.jpeg" alt=""/>
+            <p>Luna Nova</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif" alt=""/>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+            <img src="images/20.jpeg" alt=""/>
+            <p>Prism Echo</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif" alt=""/>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+            <img src="images/22.webp" alt=""/>
+            <p>Solar Pulse</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif" alt=""/>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+            <img src="images/22.jpeg" alt=""/>
+            <p>Stellar Static</p>
         </section>
     </div>
 </body>
