--- a/projects/part3/drops.html
+++ b/projects/part3/drops.html
@@ -27,70 +27,70 @@
     <div id="MusicVid">
      <h2>New Music Videos</h2>
      <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/23.gif">
+         <p>Killer-Jason</p>
         </section>
         <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/24.gif">
+         <p>Green-Cats Eye</p>
         </section>
         <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/25.gif">
+         <p>Spinning-Spiral</p>
         </section>
         <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/26.gif">
+         <p>Light-Yagami</p>
         </section>
     </div>
     <div id="Albums">
      <h2>New Albums</h2>
      <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/27.png">
+         <p>Moonlight-Deer Park</p>
         </section>
         <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/28.png">
+         <p>Toxic-Shroomer</p>
         </section>
         <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/29.png">
+         <p>Silent-BunnyMan</p>
         </section>
         <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/30.jpeg">
+         <p>Electric-Phaser</p>
         </section>
     </div>
     <div id="ThisWeek">
      <h2>New Singles</h2>
      <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/31.png">
+         <p>Fly-Birdguy</p>
         </section>
         <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/32.png">
+         <p>Billy beez-The Kids Choice</p>
         </section>
         <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/36.webp">
+         <p>Cancel-x/o</p>
         </section>
         <section>
-         <img src="images/200x200(1).gif">
-         <p>artist</p>
+         <img src="images/33.jpeg">
+         <p>Starter-Forest Fire</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/33.webp">
+            <p>Drinkme-Lemon Drop</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/34.png">
+            <p>GitIt-Github</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/35.gif">
+            <p>Blue Badge-Trumbull</p>
         </section>
 </body>
 </html>
