--- a/projects/part3/favorites.html
+++ b/projects/part3/favorites.html
@@ -27,49 +27,49 @@
     <h2 id="center">Our Weekly Favorites</h2>
     <div class="favs">
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/38.png">
+            <p>Shredder-Chainsaw Man</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/39.png">
+            <p>And What-AndWho</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/40.webp">
+            <p>Comics-Fantom</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/41.jpeg">
+            <p>Torch-Blue Flame</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/42.png">
+            <p>Reign-Dark Horse</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/43.jpeg">
+            <p>TST-Starboy</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/43.png">
+            <p>Green Day-The Knights</p>
         </section>
         <section>
-            <img src="images/200x200(1).gif">
-            <p>artist</p>
+            <img src="images/44.jpeg">
+            <p>Heat Check-FireBoy</p>
         </section>
     </div>
     <h2 id="center">Our Monthly Playlist</h2>
     <section class="playlist">
-       <a href="#"><img src="images/200x200(1).gif"></a>
-        <p>Name</p>
+       <a href="#"><img src="images/45.jpeg"></a>
+        <p>City on the map</p>
     </section>
     <section class="playlist">
-        <a href="#"><img src="images/200x200(1).gif"></a>
-        <p>Name</p>
+        <a href="#"><img src="images/46.jpeg"></a>
+        <p>30for30</p>
     </section>
     <section class="playlist">
-        <a href="#"><img src="images/200x200(1).gif"></a>
-        <p>Name</p>
+        <a href="#"><img src="images/46.png"></a>
+        <p>Group Chat Tunes</p>
 </body>
 </html>
