--- a/projects/part3/index.html
+++ b/projects/part3/index.html
@@ -26,38 +26,36 @@
     <script src="script.js"></script>
     
     <h2 id="center">Latest Video</h2>
-    <img src="images/200x200(1).gif" alt="Latest Video"/>
+    <a href="index.html"><img src="images/1.webp" alt="Latest Video"></a>
     <h2 id="center">Trending Topics</h2>
     <div class="Topics">
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <a href="index.html"><img src="images/2.webp" alt=""/></a>
+        <p>Come with us on a deep dive of Ceelos latest album</p>
     </section>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <a href="index.html"><img src="images/3.webp" alt=""/></a>
+        <p>"Sonic Odyssey: Exploring New Horizons"</p>
     </section>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <a href="index.html"><img src="images/4.webp" alt=""/></a>
+        <p>"I wish i had a horse head"-The newest step in music</p>
     </section>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <a href="index.html"><img src="images/5.webp" alt=""/></a>
+        <p>The bloodcells latest album and how it bridges the divide between rock and roll</p>
     </section>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <a href="index.html"><img src="images/7.jpeg" alt=""/></a>
+        <p>Country Partners latest travesty</p>
     </section>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <a href="index.html"><img src="images/8.jpeg" alt=""/></a>
+        <p>A deep cover soundtrack breakdown</p>
     </section>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <a href="index.html"><img src="images/9.jpeg" alt=""/></a>
+        <p>Steve Walsh's latest album and how he keeps growing as an Artist</p>
     </section>
-
-
 </body>
 </html>
