--- a/projects/part3/news.html
+++ b/projects/part3/news.html
@@ -26,34 +26,22 @@
     <script src="script.js"></script>
     <h2 id="center">Underground News</h2>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <img src="images/48.webp" alt=""/>
+        <p>The newest Pengiuns record breaks every streaming accolade possible!!!</p>
     </section>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <img src="images/49.webp" alt=""/>
+        <p>The emergence of the new brazil Underground scence </p>
     </section>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <img src="images/50.jpeg" alt=""/>
+        <p>13 of the best underground artist of all time</p>
     </section>
     <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
-    </section>
-    <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
-    </section>
-    <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
-    </section>
-    <section>
-        <img src="images/200x200(1).gif" alt=""/>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        <img src="images/51.png" alt=""/>
+        <p>True Diamonds of the underground</p>
     </section>
     <p id="center">For more news find us here</p>
-    <a href="#"><img src="images/200x200(1).gif"></a>
+    <a href="#"><img src="images/53.png"></a>
 </body>
 </html>
