--- a/assignments/assignment 8/index.html
+++ b/assignments/assignment 8/index.html
@@ -5,7 +5,7 @@
        <script src="script.js"></script>
     </head>
     <body>
-        <h1 id="center">Assignemnt 8</h1>
+        <h1 id="center">Assignment 8</h1>
         <h2 id="center">If Statements</h2>
         <nav id="main-nav">
             <div id="hamburger">
@@ -13,11 +13,33 @@
                 <div></div>
             </div>
             <ul id="nav-items" class="flex-container hide">
-                <a href="index.html"><li job="nav">Excericise 1</li></a>
-                <a href="drops.html"><li>Excericise 2</li></a>
+                <a href="index.html"><li job="nav">Exericise 1</li></a>
+                <a href="index.html"><li>Exericise 2</li></a>
         </nav>
 
         <div id="content">
-
+        <div id="exercise1">
+            <h2 id="center">Enter Command</h2>
+            <ul id="commands">
+            <li>b:read a book</li>
+            <li>c:act like a clown</li>
+            <li>p:have a birthday party</li>
+            <li>r:walk in the rain</li>
+            <li>s:shovel up some dirt</li>   
+            <li>w:go to work</li>
+            </ul>
+            <img src="images/original.jpg" id="image">
+            <input id="command" type="text" placeholder="Enter Command">
+        </div>
+        <div id="exercise2">
+            <h2 id="center">Yoga Slide</h2>
+            <img src="images/yoga1.jpg" id="yoga">
+            <input id="yogaslider" type="range" id="slider" min="1" max="8" value="1">
         </div>
         </body>
+        <footer id="main-footer">
+            <p id="center">
+                &copy; reallyrj.com
+            </p>
+                    </footer>
+    </html>
