--- a/assignments/assignment 8/index.html
+++ b/assignments/assignment 8/index.html
@@ -9,16 +9,16 @@
         <h2 id="center">If Statements</h2>
         <nav id="main-nav">
             <div id="hamburger">
-                <div></div>
-                <div></div>
+                <p id="up">&#9650</p>
+                <p id="down" class="hide">&#9660</p>
             </div>
             <ul id="nav-items" class="flex-container hide">
-                <a href="index.html"><li job="nav">Exericise 1</li></a>
-                <a href="index.html"><li>Exericise 2</li></a>
+                <a href="index.html"><li id="nav">Exericise 1</li></a>
+                <a href="index.html"><li id="nav1">Exericise 2</li></a>
         </nav>
 
         <div id="content">
-        <div id="exercise1">
+        <section id="exercise1" class="">
             <h2 id="center">Enter Command</h2>
             <ul id="commands">
             <li>b:read a book</li>
@@ -30,12 +30,13 @@
             </ul>
             <img src="images/original.jpg" id="image">
             <input id="command" type="text" placeholder="Enter Command">
-        </div>
-        <div id="exercise2">
+        </section>
+
+        <section id="exercise2" class="">
             <h2 id="center">Yoga Slide</h2>
             <img src="images/yoga1.jpg" id="yoga">
             <input id="yogaslider" type="range" id="slider" min="1" max="8" value="1">
-        </div>
+        </section>
         </body>
         <footer id="main-footer">
             <p id="center">
