--- a/projects/part3/index.html
+++ b/projects/part3/index.html
@@ -28,34 +28,37 @@
     <h2 id="center">Latest Video</h2>
     <a href="index.html"><img src="images/1.webp" alt="Latest Video"></a>
     <h2 id="center">Trending Topics</h2>
-    <div class="Topics">
-    <section>
+    <div class="Topics1">
+    <section class="one">
         <a href="index.html"><img src="images/2.webp" alt=""/></a>
         <p>Come with us on a deep dive of Ceelos latest album</p>
     </section>
-    <section>
+    <section class="one">
         <a href="index.html"><img src="images/3.webp" alt=""/></a>
         <p>"Sonic Odyssey: Exploring New Horizons"</p>
     </section>
-    <section>
+    <section class="one">
         <a href="index.html"><img src="images/4.webp" alt=""/></a>
         <p>"I wish i had a horse head"-The newest step in music</p>
     </section>
-    <section>
+    <section class="one">
         <a href="index.html"><img src="images/5.webp" alt=""/></a>
         <p>The bloodcells latest album and how it bridges the divide between rock and roll</p>
     </section>
-    <section>
+    </div>
+    <div class="Topics2">
+    <section class="one">
         <a href="index.html"><img src="images/7.jpeg" alt=""/></a>
         <p>Country Partners latest travesty</p>
     </section>
-    <section>
+    <section class="one">
         <a href="index.html"><img src="images/8.jpeg" alt=""/></a>
         <p>A deep cover soundtrack breakdown</p>
     </section>
-    <section>
+    <section class="one">
         <a href="index.html"><img src="images/9.jpeg" alt=""/></a>
         <p>Steve Walsh's latest album and how he keeps growing as an Artist</p>
     </section>
+    </div>
 </body>
 </html>
