--- a/index.html
+++ b/index.html
@@ -54,11 +54,17 @@ Assignments
         </section>
         <section>
             <h2>Assignment 8-If Statements</h2>
-            <a href="assignments/assignment 8/index.html"><img src="images/ss5.png"/></a>
+            <a href="assignments/assignment 8/index.html"><img src="images/ss6.png"/></a>
             <p>
                 Using if statements in JavaScript
             </p>
         </section>
+        <section>
+            <h2>Assignment 9-For Loops</h2>
+            <a href="assignments/assignment 9/index.html"><img src="images/ss6.png"/></a>
+            <p>
+                Using for loops in JavaScript
+            </p>
 </div> 
 <div id="center">
 <h2>Projects</h2>
