--- a/assignments/assignment 9/index.html
+++ b/assignments/assignment 9/index.html
@@ -29,7 +29,9 @@
     <img src="images/yoga8.jpg" id="yogapic8"/>
     </div>
     <div class="two">
+   <div class="def">
     <p>Definiton</p>
+   </div>
    </div>
     </div>
     </div>
