--- a/projects/part3/artist.html
+++ b/projects/part3/artist.html
@@ -25,23 +25,26 @@
     </nav>
     <script src="script.js"></script>
     <h2 id="center">Artist Spotlight</h2>
+    <div id="artistspotlight">
     <img src="images/18.avif" alt="Artist Spotlight"/>
-    <p>Our weekly arist:TisaRay</p>
-    <div id="Upcoming">
-        <h3>Upcoming Artist</h3>
-        <section>
+    <p>Our weekly arist: TisaRay</p>
+   </div>
+   <h3>Upcoming Artist</h3>
+    <div class="Upcoming">
+        
+        <section class="two">
             <img src="images/19.jpeg" alt=""/>
             <p>Luna Nova</p>
         </section>
-        <section>
+        <section class="two">
             <img src="images/20.jpeg" alt=""/>
             <p>Prism Echo</p>
         </section>
-        <section>
+        <section class="two">
             <img src="images/22.webp" alt=""/>
             <p>Solar Pulse</p>
         </section>
-        <section>
+        <section class="two">
             <img src="images/22.jpeg" alt=""/>
             <p>Stellar Static</p>
         </section>
