--- a/projects/part3/drops.html
+++ b/projects/part3/drops.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
 </head> 
 <body id="Drops">
-    <h1>New Drops</h1>
+    <h1>Underground Wiki</h1>
     <nav id="main-nav">
         <div id="hamburger">
             <div></div>
@@ -24,6 +24,7 @@
         </ul>
     </nav>
     <script src="script.js"></script>
+    <h1 id="center">New Drops</h1>
     <div class="MusicVid">
      <h2>New Music Videos</h2>
      <section class="one">
@@ -48,11 +49,7 @@
      <section class="one">
          <img src="images/27.png">
          <p>Moonlight-Deer Park</p>
-        </section>
-        <section class="one">
-         <img src="images/28.png">
-         <p>Toxic-Shroomer</p>
-        </section>
+     </section>
         <section class="one">
          <img src="images/29.png">
          <p>Silent-BunnyMan</p>
@@ -81,8 +78,8 @@
          <p>Starter-Forest Fire</p>
         </section>
         <section class="one">
-            <img src="images/34.png">
-            <p>GitIt-Github</p>
+            <img src="images/devil.png">
+            <p>WorstIdea-BadmanBadmon</p>
         </section>
         <section class="one">
             <img src="images/35.gif">
