--- a/projects/part3/index.html
+++ b/projects/part3/index.html
@@ -24,7 +24,8 @@
         </ul>
     </nav>
     <script src="script.js"></script>
-    
+
+    <h1 id="center" class="Enjoy">Enjoy...at your own risk</h1>
     <h2 id="center">Latest Video</h2>
     <a href="index.html"><img src="images/1.webp" alt="Latest Video"></a>
     <h2 id="center">Trending Topics</h2>
