--- a/projects/part3/news.html
+++ b/projects/part3/news.html
@@ -24,24 +24,28 @@
         </ul>
     </nav>
     <script src="script.js"></script>
+    
     <h2 id="center">Underground News</h2>
-    <section>
+    <div class="newski">
+    <section class="one">
         <img src="images/48.webp" alt=""/>
         <p>The newest Pengiuns record breaks every streaming accolade possible!!!</p>
     </section>
-    <section>
+    <section class="one">
         <img src="images/49.webp" alt=""/>
         <p>The emergence of the new brazil Underground scence </p>
     </section>
-    <section>
+    <section class="one">
         <img src="images/50.jpeg" alt=""/>
         <p>13 of the best underground artist of all time</p>
     </section>
-    <section>
+    <section class="one">
         <img src="images/51.png" alt=""/>
         <p>True Diamonds of the underground</p>
     </section>
+</div>
     <p id="center">For more news find us here</p>
-    <a href="#"><img src="images/53.png"></a>
+    <a href="#"><img src="images/grimmer.jpeg"></a>
+
 </body>
 </html>
