--- a/projects/part3/drops.html
+++ b/projects/part3/drops.html
@@ -28,7 +28,7 @@
     <div class="MusicVid">
      <h2>New Music Videos</h2>
      <section class="one">
-         <img src="images/23.gif">
+         <a href=information3.html><img src="images/23.gif"></a>
          <p>Killer-Jason</p>
         </section>
         <section class="one">
@@ -44,10 +44,10 @@
          <p>Light-Yagami</p>
         </section>
     </div>
-    <div class="Albums">
+    <div id="albumcol" class="Albums">
      <h2>New Albums</h2>
      <section class="one">
-         <img src="images/27.png">
+         <a href="information.html"><img src="images/27.png"></a>
          <p>Moonlight-Deer Park</p>
      </section>
         <section class="one">
@@ -62,7 +62,7 @@
     <div class="ThisWeek">
      <h2>New Singles</h2>
      <section class="one">
-         <img src="images/31.png">
+         <a href="information2.html"><img src="images/31.png"></a>
          <p>Fly-Birdguy</p>
         </section>
         <section class="one">
