--- a/projects/part3/news.html
+++ b/projects/part3/news.html
@@ -26,20 +26,20 @@
     <script src="script.js"></script>
     
     <h2 id="center">Underground News</h2>
-    <div class="newski">
-    <section class="one">
-        <img src="images/48.webp" alt=""/>
+    <div class="">
+    <section class="">
+       <a href="information4.html"><img src="images/48.webp" alt=""/></a>
         <p>The newest Pengiuns record breaks every streaming accolade possible!!!</p>
     </section>
-    <section class="one">
+    <section class="">
         <img src="images/49.webp" alt=""/>
         <p>The emergence of the new brazil Underground scence </p>
     </section>
-    <section class="one">
+    <section class="">
         <img src="images/50.jpeg" alt=""/>
         <p>13 of the best underground artist of all time</p>
     </section>
-    <section class="one">
+    <section class="">
         <img src="images/51.png" alt=""/>
         <p>True Diamonds of the underground</p>
     </section>
