--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@ Assignments
             <p>
                 Using for loops in JavaScript
             </p>
+        </section>
+        <section>
+            <h2>Assignment 10-Arrays</h2>
+            <a href="assignments/assignment 10/index.html"><img src="images/ss9.png"></a>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
