--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@ Assignments
         </p>
     </section>
     <section>
-        <h2>Project-Part 3</h2>
+        <h2>Project-Part 4</h2>
         <a href="projects/part3/index.html"><img src="images/proj3.png"/></a>
         <p>
-            Creating wireframes
+            final website
         </p>
     </section>
 </div>
