--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ Assignments
             <h2>Assignment 10-Arrays</h2>
             <a href="assignments/assignment 10/index.html"><img src="images/ss10.png"></a>
         </section>
+        <section>
+            <h2>Assignment 11-Classes</h2>
+            <a href="assignments/assignment 11/index.html"><img src="images/ss10.png"></a>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
