--- a/assignments/assignment 11/index.html
+++ b/assignments/assignment 11/index.html
@@ -7,8 +7,7 @@
     <body id="mainbody">
     <h1 id="center">Assignment 11</h1>
     <h2 id="center">Classes</h2>
-    <div id="section" class="flex">
-    <section id="tree-list"></section>
+    <section id="tree-list" class="tree-list"></section>
      <!-- <section id="cypress" class="one">
     <h1>Bald Cypress</h1>
     <img src="images/cypress.webp">
@@ -25,7 +24,6 @@
     <h1>Southern Magnolia</h1>
     <img src="images/magnolia.jpeg">
     </section>  -->
- </div>
     </body>
     <footer id="main-footer">
         <p id="center">
