--- a/assignments/assignment 11/index.html
+++ b/assignments/assignment 11/index.html
@@ -2,28 +2,23 @@
 <html lang="eng">
     <head>
        <link rel="stylesheet" href="styles.css"/>
+       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
        <script src="script.js"></script>
     </head>
     <body id="mainbody">
     <h1 id="center">Assignment 11</h1>
     <h2 id="center">Classes</h2>
     <section id="tree-list" class="tree-list"></section>
-     <!-- <section id="cypress" class="one">
-    <h1>Bald Cypress</h1>
-    <img src="images/cypress.webp">
-    </section>
-    <section id="redbud" class="one">
-    <h1>Eastern Redbud</h1>
-    <img src="images/redbud.webp">
-    </section>
-    <section id="pine" class="one">
-    <h1>Loblolly Pine</h1>
-    <img src="images/pine.avif">
-    </section>
-    <section id="magnolia" class="one">
-    <h1>Southern Magnolia</h1>
-    <img src="images/magnolia.jpeg">
-    </section>  -->
+    <!-- Modal -->
+    <div id="id01" class="w3-modal">
+        <div class="w3-modal-content">
+          <div class="w3-container">
+            <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+            <section id="modal-content" class="modal-content"></section>
+          </div>
+        </div>
+      </div>
+    <!-- Modal -->
     </body>
     <footer id="main-footer">
         <p id="center">
