--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@ Assignments
             <h2>Assignment 11-Classes</h2>
             <a href="assignments/assignment 11/index.html"><img src="images/ss11.png"></a>
         </section>
+        <section>
+            <h2>Assignment 12-Parsing Json</h2>
+            <a href="assignments/assignment 12/index.html"><img src="images/ss12.png"></a>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
