--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ Assignments
             <h2>Assignment 12-Parsing Json</h2>
             <a href="assignments/assignment 12/index.html"><img src="images/ss12.png"></a>
         </section>
+        <section>
+            <h2>Assignment 13-Server Side Hello World</h2>
+            <img src="images/ss13.png">
+            <p><a href=https://github.com/reallyrj/server-hello-world>Code Repo</a></p>
+            <p><a href=https://server-hello-world-d2ov.onrender.com>Live Demo</a></p>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
