--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@ Assignments
             final website
         </p>
     </section>
+    <section>
+        <h2>Project-Part 5</h2>
+        <a href="projects/Part5/index.html"><img src="images/proj3.png"/></a>
+        <p>
+            final website with json parse
+        </p>
+    </section>
 </div>
 </div>
 </div>
