--- a/projects/Part5/information.html
+++ b/projects/Part5/information.html
@@ -24,12 +24,7 @@
         </ul>
     </nav>
     <script src="script.js"></script>
-    <h1>Moonlight Symphony: A Deep Dive into Deerpark's Album "Moonlight"</h1>
-    <p>In the vast landscape of contemporary music, certain albums stand out as transformative experiences, guiding listeners on a journey through soundscapes both familiar and uncharted. Deerpark's album "Moonlight" is one such masterpiece, weaving together elements of folk, indie rock, and dream pop to create a sonic tapestry that is at once ethereal and grounded, introspective and expansive. Let's embark on a journey through the haunting melodies and evocative lyrics of "Moonlight.</p>
-    <h2>Atmospheric Ambiance</h2>
-    <p>From the opening notes of the title track to the fading echoes of the final chords, "Moonlight" envelops listeners in a mesmerizing atmosphere that is both otherworldly and intimately familiar. The album's production is characterized by lush instrumentation, shimmering guitars, and ethereal synths, creating a sense of sonic lushness that transports listeners to a dreamlike realm where time seems to stand still.</p>
-    <h2>Lyrical Depth</h2>
-    <p>At the heart of "Moonlight" lies a collection of deeply introspective and emotionally resonant lyrics that explore themes of love, loss, and existential longing. Each song is a lyrical journey unto itself, with Deerpark's poetic imagery and evocative storytelling painting vivid portraits of human experience. Whether it's the haunting introspection of "Shadows in the Night" or the bittersweet nostalgia of "Fading Memories," the lyrics of "Moonlight" invite listeners to reflect on their own hopes, fears, and dreams.</p>
-    
+    <div id="album-section"></div>
+
     </body>
     </html>
