--- a/projects/Part5/information.html
+++ b/projects/Part5/information.html
@@ -24,6 +24,7 @@
         </ul>
     </nav>
     <script src="script.js"></script>
+    <h1>More Albums from Deer Park </h1>
     <div id="album-section"></div>
 
     </body>
