--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@ Assignments
             final website with json parse
         </p>
     </section>
+    <section>
+        <h2>Project-Part 6</h2>
+        <a href="projects/part6/index.html"><img src="images/proj4.png"/></a>
+    </section>
 </div>
 </div>
 </div>
