--- a/projects/part6/contact.html
+++ b/projects/part6/contact.html
@@ -3,9 +3,7 @@
 <head>
     <Title>Underground Wiki</Title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
-    <script src="contactme.js"></script>
-    <script src="form.js"></script>
+    
 </head> 
 <body id="Drops">
     <h1>Underground Wiki</h1>
@@ -27,8 +25,6 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
-    <script src="script.js"></script>
-    <body>
         <section class="info-section columns">
             <section>
               <h4>Work for Underground Wiki</h4>
@@ -36,7 +32,7 @@
                 Please enter your information, and we'll get back to you 
                 when we can!!!
               </p>
-              <form id="form-persom">
+              <form id="form-person">
                 <p>
                   <label for="person-name">Name:</label>
                   <input type="text" id="person-name" name="person-name" required="" minlength="3">
@@ -73,7 +69,7 @@
             </section>
           </section>
           <section class="info-section">
-            <h3>Contact Jasper</h3>
+            <h3>Contact Us</h3>
             <div class="columns">
               <form
                 id="contact-form"
@@ -124,12 +120,15 @@
               </form>
               <iframe
                 id="map"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.9680495664916!2d-81.03426492365364!3d33.99335442083652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f8bb2802562b89%3A0x1f5707bd271c887!2sAssembly%20Blossom%20NB!5e0!3m2!1sen!2sus!4v1697203534136!5m2!1sen!2sus"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.1673724700886!2d-73.9928281!3d40.736342500000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259bc8a503765%3A0xcfe6c1a02dfd33d3!2sSoundCloud%20NYC!5e0!3m2!1sen!2sus!4v1710881746773!5m2!1sen!2sus"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
             </div>
           </section>
-
+          <script src="script.js"></script>
+          <script src="contactme.js"></script>
+          <script src="form.js"></script>
     </body>
+    </html>
