--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@ Assignments
             <p><a href=https://github.com/reallyrj/server-hello-world>Code Repo</a></p>
             <p><a href=https://server-hello-world-d2ov.onrender.com>Live Demo</a></p>
         </section>
+        <section>
+            <h2>Assignment 14-Reading Server Side JSON</h2>
+            <img src="images/ss14.png">
+            <p><a href=https://github.com/reallyrj/Assignment-14>Code Repo</a></p>
+            <p><a href=https://assignment-14-vjhm.onrender.com>Live Demo</a></p>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
