--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@ Assignments
             <p><a href=https://github.com/reallyrj/Assignment-14>Code Repo</a></p>
             <p><a href=https://assignment-14-vjhm.onrender.com>Live Demo</a></p>
         </section>
+        <section>
+            <h2>Assignment 15-server get and post</h2>
+            <img src="images/ss15.png">
+            <p><a href=https://github.com/reallyrj/Assignment-15>Code Repo</a></p>
+            <p><a href=https://assignment-15-gp4m.onrender.com>Live Demo</a></p>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
